--- a/docs/new-architecture.adoc
+++ b/docs/new-architecture.adoc
@@ -78,7 +78,7 @@ FIXME 以下をまともな日本語にする。
 ** 全てのテストで同じ環境が使い回されるため、リソースの名前などに乱数を取り入れるなどの工夫が必要になる。
 ** `kubectl` などを使ってクラスタの状態を確認できないため、テストのデバッグが難しい。
 ** 本物の Kubernetes クライアントを使用する必要がある。その結果 controller-runtime に存在するキャッシュの影響をうける。特にテスト中に（Gomega の） `Eventually` を多用する必要があり、これによりフレーキーなテストを書きがち。
-** テスト用のリソースを作成する際に、コントローラの処理では本来不要なフィールドまで埋める必要がある。
+** テスト用のリソースを作成する際に、リコンサイラの処理では本来不要なフィールドまで埋める必要がある。
 * 以上を考えると、なにかテストしたい挙動がある場合にはまず単体テストで実装し、それが不十分な場合は統合テストで行い、それでも不十分なら E2E テストで実施するべき。
 ** 一方で envtest・E2E テストでしか実装できないテストというものは存在する<<achilles-sdk-why-use-envtest>>ので単体テストだけでは不十分。
 * 単体テストを書きやすいアーキテクチャとしてドメインモデルが知られている（<<learning-ddd>> P.194）ので、この設計ではそれを採用している。
