--- a/docs/new-architecture.adoc
+++ b/docs/new-architecture.adoc
@@ -138,6 +138,14 @@ controller-runtime が生成する `Reconcile` 関数からユースケース層
 
 https://github.com/cybozu-go/mantle/pull/244
 
+== ドメイン駆動設計（DDD）との差異
+
+この設計は DDD の方法論<<learning-ddd>>を参考にしているが、DDD そのものではない。以下に差異をまとめる。
+
+FIXME 以下をまともな日本語にする。
+
+. ドメインイベントの使い方が本来と異なる。特に、この設計は Kubernetes クラスタを介してイベントを発行するというアプローチと捉えることができるが、トランザクションが存在しないため、ドメインイベントの ACID（特に A）が担保されない。
+
 == その他考慮すべきこと（まだまとまっていないこと）
 
 * `.status.conditions` はユーザー向けなので処理が依存するべきではないが `.status` は観測結果を書く限りにおいて依存して良さそう。
